--- a/IDGS904_tema1/Views/Distancia2Num/Resultado.cshtml
+++ b/IDGS904_tema1/Views/Distancia2Num/Resultado.cshtml
@@ -7,5 +7,5 @@
 <h2>Resultado</h2>
 
 <div class="row div col-lg-6">
-    <h1>El resultado es: @ViewBag.resultado</h1>
+    <h1>El resultado es: @TempData["Resu"]</h1>
 </div>
